--- a/bash.1
+++ b/bash.1
@@ -2947,7 +2947,7 @@ set しても元には戻りません。
 .\"O subsequently reset.
 この変数が参照されると、その場所ごとに、
 スクリプトや関数における現在の行番号 (1 から始まります) を表す
-10 進値に置き変わります。スクリプトや関数の内部でない場合には、
+10 進値に置き換わります。スクリプトや関数の内部でない場合には、
 意味のある値が代入されることは保証されません。
 .SM
 .B LINENO
