updated which reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -3267,8 +3267,8 @@ GNU 標準の \fIcpu-company-system\fP の形式で設定されます。
 .\"O being closed.
 .SM
 .B BASH_XTRACEFD
-に 2 (標準エラー出力のファイル・ディスクリプター) を設定して
-unset すると、標準エラー出力がクローズされてしまうことに
+に 2 (標準エラー出力のファイル・ディスクリプター) を設定してしまうと、
+unset したときに標準エラー出力がクローズされてしまうことに
 注意してください。
 .TP
 .B CDPATH
