updated which reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -3653,7 +3653,7 @@ SIGWINCH を受信すると自動的に設定されます。
 .\"O \fBLC_\fP variable specifying a locale category.
 この変数はロケールカテゴリを指定する \fBLC_\fP 変数と
 .B LANG
-のすべての値に優先します。
+の値に優先します。
 .TP
 .B LC_COLLATE
 .\"O This variable determines the collation order used when sorting the
@@ -4068,13 +4068,11 @@ CPU のパーセンテージ。(%U + %S) / %R で算出されます。
 この変数は、ユーザがジョブ制御をするときの方法を変更します。
 この変数を設定した場合、1 語からなるリダイレクトなしの単純なコマンドを
 入力すると、停止中のジョブの実行再開候補として扱われます。
-曖昧な指定は許されません。
-入力された文字列で始まるジョブが複数ある場合には、
+曖昧な指定は許されず、入力された文字列で始まるジョブが複数ある場合には、
 最後にアクセスされたものが選ばれます。
-このとき、コマンドを起動するときに使ったコマンドラインを
 停止中のジョブの
 .I 名前
-として指定します。
+とは、コマンドを起動する際に使ったコマンドラインのことです。
 この変数の値に
 .IR exact
 が設定されている場合、
