--- a/bash.1
+++ b/bash.1
@@ -49,7 +49,6 @@
 .\"WORD:	positional parameter	位置パラメータ
 .\"WORD:	preamble		前置部分
 .\"WORD:	postscript		後置部分
-.\"WORD:	level of variable indirection	間接変数レベル
 .\"WORD:	arithmetic expansion	算術式展開
 .\"WORD:	naming open file	名前付きオープンファイル
 .\"WORD:	collation weight	照合重さ
@@ -4758,11 +4757,11 @@ ${\fIparameter\fP}
 .\"O ${\fB!\fP\fIname\fP[\fI@\fP]} described below.
 .\"O The exclamation point must immediately follow the left brace in order to
 .\"O introduce indirection.
-\fIparameter\fP の最初の文字が感嘆符である場合、間接変数レベル
-(level of variable indirection) という概念が導入されます。
-\fBbash\fP は、展開に \fIparameter\fP  そのものの値を使用するのでなく、
-\fIparameter\fP の感嘆符を除いた残りの文字を変数名として扱い、
-その変数の値をその後の展開に使用します。
+\fIparameter\fP の最初の文字が感嘆符ならば、一段の変数間接参照が
+行われます。
+この場合、\fBbash\fP はまず、\fIparameter\fP の感嘆符を除いた部分を
+変数名とし、展開します。
+そして、値そのものを使うのではなく、続いて変数名の置換に使います。
 これが\fI間接展開 (indirect expansion)\fP と呼ばれるものです。
 ただし ${!\fIprefix\fP*} や ${\fB!\fP\fIname\fP[\fI@\fP]} の展開は例外です。
 これは以下で説明します。
