updated which reviewer pointed (PARAMETERS)
Thanks to 長南洋一

--- a/bash.1
+++ b/bash.1
@@ -4761,7 +4761,7 @@ ${\fIparameter\fP}
 行われます。
 この場合、\fBbash\fP はまず、\fIparameter\fP の感嘆符を除いた部分を
 変数名とし、展開します。
-そして、値そのものを使うのではなく、続いて変数名の置換に使います。
+そして、値を展開結果として使うのではなく、続いて変数名の置換に使います。
 これが\fI間接展開 (indirect expansion)\fP と呼ばれるものです。
 ただし ${!\fIprefix\fP*} や ${\fB!\fP\fIname\fP[\fI@\fP]} の展開は例外です。
 これは以下で説明します。
